--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
 discord.py
-groq
 flask
-gunicorn
-discord.py
-flask
-groq
 gunicorn
 python-dotenv
 wavelink
 pynacl
-discord.py
-flask
-groq
-gunicorn
-python-dotenv
-wavelink
-google-generativeai
+openai
